@@ -671,6 +671,45 @@ Run the demo with `docker-compose -f docker-compose-step5.yml up` then look at t
 
 You can play around with the alerting system etc.
 
+## Getting these Errors:
+
+```
+grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_elasticsearch_1 exited with code 78
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:33Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:33Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:33Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:33Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:33Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:33Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+logstash_1                    | 04:07:33.985 [Ruby-0-Thread-5: /usr/share/logstash/vendor/bundle/jruby/1.9/gems/logstash-output-elasticsearch-7.4.3-java/lib/logstash/outputs/elasticsearch/http_client/pool.rb:228] INFO  logstash.outputs.elasticsearch - Running health check to see if an Elasticsearch connection is working {:healthcheck_url=>http://elasticsearch:9200/, :path=>"/"}
+logstash_1                    | 04:07:33.990 [Ruby-0-Thread-5: /usr/share/logstash/vendor/bundle/jruby/1.9/gems/logstash-output-elasticsearch-7.4.3-java/lib/logstash/outputs/elasticsearch/http_client/pool.rb:228] WARN  logstash.outputs.elasticsearch - Attempted to resurrect connection to dead ES instance, but got an error. {:url=>"http://elasticsearch:9200/", :error_type=>LogStash::Outputs::ElasticSearch::HttpClient::Pool::HostUnreachableError, :error=>"Elasticsearch Unreachable: [http://elasticsearch:9200/][Manticore::SocketException] Connection refused (Connection refused)"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:35Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:35Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:36Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:36Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:36Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:36Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+elasticsearch_1               | [2022-07-29T04:07:36,973][INFO ][o.e.n.Node               ] [] initializing ...
+elasticsearch_1               | [2022-07-29T04:07:37,167][INFO ][o.e.e.NodeEnvironment    ] [NvmQ9Fo] using [1] data paths, mounts [[/ (overlay)]], net usable_space [32.8gb], net total_space [77.3gb], spins? [possibly], types [overlay]
+elasticsearch_1               | [2022-07-29T04:07:37,169][INFO ][o.e.e.NodeEnvironment    ] [NvmQ9Fo] heap size [1.9gb], compressed ordinary object pointers [true]
+elasticsearch_1               | [2022-07-29T04:07:37,179][INFO ][o.e.n.Node               ] node name [NvmQ9Fo] derived from node ID [NvmQ9FoMQ8yrvoXl5PdI_Q]; set [node.name] to override
+elasticsearch_1               | [2022-07-29T04:07:37,181][INFO ][o.e.n.Node               ] version[5.6.0], pid[1], build[781a835/2017-09-07T03:09:58.087Z], OS[Linux/5.4.0-122-generic/amd64], JVM[Oracle Corporation/OpenJDK 64-Bit Server VM/1.8.0_141/25.141-b16]
+elasticsearch_1               | [2022-07-29T04:07:37,181][INFO ][o.e.n.Node               ] JVM arguments [-Xms2g, -Xmx2g, -XX:+UseConcMarkSweepGC, -XX:CMSInitiatingOccupancyFraction=75, -XX:+UseCMSInitiatingOccupancyOnly, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -Djdk.io.permissionsUseCanonicalPath=true, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Dlog4j.skipJansi=true, -XX:+HeapDumpOnOutOfMemoryError, -Des.cgroups.hierarchy.override=/, -Des.path.home=/usr/share/elasticsearch]
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:38Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"Unable to revive connection: http://elasticsearch:9200/"}
+kibana_1                      | {"type":"log","@timestamp":"2022-07-29T04:07:38Z","tags":["warning","elasticsearch","admin"],"pid":1,"message":"No living connections"}
+^CGracefully stopping... (press Ctrl+C again to force)
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_chronograf_1                 ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_telegraf_1                   ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_kapacitor_1                  ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_influxdb_1                   ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_metricbeat_1                 ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_logspout_1                   ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_logstash_1                   ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_kibana_1                     ... done
+Stopping grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_elasticsearch_1              ... done
+Stopping cdf6d2559676_grafana-monitoring-elastic-tick-kafka-ksql-c3-prometheus_example_1       ... done
+```
+
 # 7. Getting the best of the ecosystem
 
 Are are now in a pretty good shape
